Final working version4

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-  "functions": {
-    "app.js": {
-      "runtime": "@vercel/node"
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
     }
-  },
-  "routes": [
-    { "src": "/AFF_logo.jpg", "dest": "/AFF_logo.jpg" },
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
